fix: hr not showing on safari

--- a/src/theme/default/components/hr.less
+++ b/src/theme/default/components/hr.less
@@ -2,6 +2,7 @@ hr {
   border-top-width: 0px;
   border-left-width: 0px;
   border-right-width: 0px;
+  border-bottom-width: 0.5px;
   border-color: @hr-color;
   margin-bottom: @default-distance;
 }
